# RustGame

./: Cargo.toml  README.md  build_assets.rs
assets/: initial_map.txt  manifest.txt  map.tmx  player.piskel  second_map.txt  sound-effects.txt  sprites.txt  tile_maps.txt  tiles.tsx  tiles.txt
assets/sounds/: music_track1.json
src/: audio.rs  entity.rs  gfx.rs  main.rs  tilemap.rs
src/engine/: audio.rs  entity.rs  gfx.rs  lib.rs  tilemap.rs  ui.rs  util.rs
src/game/: assets.rs  entities.rs  main.rs
